sandc/test/fixtures/pbtRegression/shouldSucceed/manyFilesSamePackage/Baz.sand
package foo;

pub class Baz extends Bar {
    
}