sandc/test/fixtures/pbtRegression/shouldFail/unqualifiedPackageRefs/namedFromDifferentlyNamed/Bar.sand
package bar;

pub class Bar {
    
}